# BMW-CS

./: .gitignore  README.md
QueryProcessor/processador/: CMakeLists.txt  globalVariables.cmake
QueryProcessor/processador/src/: CMakeLists.txt  DocsInfo.cpp  DocsInfo.h  Index.cpp  Index.h  PostingList.cpp  PostingList.h  bma.cpp~  bma.h~  bmw.cpp~  bmw.h~  heap.cc  heap.h  heap.h~  kwquery.cpp  kwquery.h  queryparser.cpp  queryparser.h  queryprocessor.cpp  queryprocessor.h  queryprocessor.h~  result.h  result.h~  snippets.cpp  snippets.cpp.old  snippets.h  snippets.h.old
QueryProcessor/processador/src/parser/: parse_query.h  valstringuniao.cc  valstringuniao.h
QueryProcessor/processador/src/run/: queryProcessor.cpp
Try/: GeraArqDocBase  estimaDistribuicao  geraIdf  geraIndice.py  geraIndiceFrequencia  geraNorma  geraParcial  geraSkiplistBlockMaxFIX  mergeParcial  splitIndex
Try/GovBase/: idx  t.1  t.10  t.100  t.1000  t.1001  t.1002  t.1003  t.1004  t.1005  t.1006  t.1007  t.1008  t.1009  t.101  t.1010  t.1011  t.1012  t.1013  t.1014  t.1015  t.1016  t.1017  t.1018  t.1019  t.102  t.1020  t.1021  t.1022  t.1023  t.1024  t.1025  t.1026  t.1027  t.1028  t.1029  t.103  t.1030  t.1031  t.1032  (+9760 more)
